--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -29,13 +29,13 @@
             </div>
         </div>
         <div class="row">
-            <div class="input-field col s12">
+            <div id="matfix" class="input-field col s12">
                 <i class="material-icons prefix">today</i>
                 <input id="due_date" name="due_date" type="text" class="datepicker">
                 <label for="icon_prefix">Due Date</label>
             </div>
         </div>
-        <div class="row">
+         <div class="row">
             <div class="switch">
                 <label>
                   <input id="is_urgent" name="is_urgent" type="checkbox">
@@ -43,6 +43,11 @@
                   Is Urgent
                 </label>
             </div>
+        </div>
+        <div class="row">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
+                <i class="material-icons right">playlist_add</i>
+             </button>
         </div>
     </form>
 </div>
