--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         $(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
+            $('select').formSelect();
         });
         
         $('.datepicker').pickadate({
@@ -25,6 +26,10 @@
             close: 'Ok',
             closeOnSelect: false // Close upon selecting a date,
         });
+        
+        document.getElementById("matfix").addEventListener("click", function(e) {
+	e.stopPropagation();
+});
     </script>
 </body>
 
