--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -38,30 +38,18 @@
          <div class="row">
             <div class="switch">
                 <label>
-                    {% if task.is_urgent %}
-                          <input id="is_urgent" name="is_urgent" type="checkbox" checked>
-                    {% else %}
-                         <input id="is_urgent" name="is_urgent" type="checkbox">
-                    {% endif%}
+                  <input id="is_urgent" name="is_urgent" type="checkbox">
                   <span class="lever"></span>
                   Is Urgent
                 </label>
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Edit Task
+            <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
                 <i class="material-icons right">playlist_add</i>
              </button>
         </div>
     </form>
 </div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function() {
-        due_date = Date.parse('{{task.due_date}}');
-        $('#due_date').pickadate('picker').set('select', due_date, { format: 'dd/mm/yyyy' }).trigger('change');
-    });
-</script>
 
 {% endblock %}
