--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -2,7 +2,7 @@
 
 <h3>Edit Task</h3>
 <div class="row">
-    <form action="{{ url_for('edit_task', task_id=task._id) }}" method="POST"  class="col s12">
+    <form action="{{ url_for('update_task', task_id=task._id) }}" method="POST"  class="col s12">
          <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">poll</i>
@@ -54,10 +54,17 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
+            <button class="btn waves-effect waves-light" type="submit" name="action">Edit Task
                 <i class="material-icons right">playlist_add</i>
              </button>
         </div>
     </form>
 </div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        due_date = Date.parse('{{task.due_date}}');
+        $('#due_date').pickadate('picker').set('select', due_date, { format: 'dd/mm/yyyy' }).trigger('change');
+    });
+</script>
 {% endblock %}
