--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
         $(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
+            $(".button-collapse").sideNav();
         });
         $('.datepicker').pickadate({
             selectMonths: true, // Creates a dropdown to control month
